--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,7 @@ app.*.map.json
 # Signing key
 **/android/key.properties
 *.jks
+*.p12
+
+# GitHub Actions generated keystore
+**/android/app/keystore.p12
