--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: puzzgame_flutter
-description: "Nook - A Flutter-based puzzle game app with hexagonal architecture."
+description: "Puzzle Bazaar - A Flutter-based puzzle game app with hexagonal architecture."
 publish_to: 'none'
-version: 0.1.7+8
+version: 0.1.8+9
 
 environment:
   sdk: '>=3.7.2 <4.0.0'
