--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   
   # Error Tracking & Monitoring
   sentry_flutter: ^8.14.2
+  
+  # Animations
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -58,6 +61,7 @@ flutter:
   # Include image assets
   assets:
     - assets/images/
+    - assets/animations/
     - assets/puzzles/sample_puzzle_01/
     - assets/puzzles/sample_puzzle_01/layouts/8x8/
     - assets/puzzles/sample_puzzle_01/layouts/8x8/pieces/
